--- a/about_zh.html
+++ b/about_zh.html
@@ -15,22 +15,22 @@
         <div class="nav fl">
             <ul>
                 <li>
-                    <a href="index.html">HOME</a>
+                    <a href="index_zh.html">首页</a>
                 </li>
                 <li>
-                    <a href="about.html">ABOUT</a>
+                    <a href="about_zh.html">关于诺亦腾</a>
                 </li>
                 <li>
-                    <a href="application.html">APPLICATIONS</a>
+                    <a href="application_zh.html">行业</a>
                 </li>
                 <li>
-                    <a href="products.html">PRODUCTS</a>
+                    <a href="products_zh.html">产品</a>
                 </li>
                 <li>
-                    <a href="support.html">SUPPORT</a>
+                    <a href="support_zh.html">支持</a>
                 </li>
                 <li>
-                    <a href="conact.html">CONTACT</a>
+                    <a href="conact_zh.html">联系我们</a>
                 </li>
             </ul>
         </div>
@@ -39,9 +39,9 @@
 <div class="content-wrap">
     <div class="leftnav">
         <ul id="leftnav">
-            <li class="page_item active" tabcont="intro" ><a href="javascript:void(0)">Company Profile</a></li>
+            <li class="page_item active" tabcont="intro" ><a href="javascript:void(0)">公司简介</a></li>
             <li class="page_item" tabcont="news">
-                <a href="javascript:void(0)" >Dynamic and news</a>
+                <a href="javascript:void(0)" >动态新闻</a>
                 <!--<ul class="snav">-->
                     <!--<li tabcont="news">asdfasdfasdf</li>-->
                     <!--<li tabcont="news1">asdfasdfasdf</li>-->
@@ -49,22 +49,38 @@
                     <!--<li class="last" tabcont="news3">asdfasdfasdf</li>-->
                 <!--</ul>-->
             </li>
-            <li class="page_item" tabcont="tech"><a href="javascript:void(0)">Motion Capture Technology</a></li>
+            <li class="page_item" tabcont="tech"><a href="javascript:void(0)">动作捕捉技术简介</a></li>
         </ul>
     </div>
     <div class="rightcontent">
         <div id="intro" class="intro">
-            <h3>NOITOM is changing the business of MOTION</h3>
+            <h3>公司简介</h3>
             <p>
-                Noitom Limited was founded in 2010 by a group of engineers that believe people are entitled to use the best and latest technologies in their daily life.      Our focus is to develop world-class motion capture technology by the integration of MEMS sensors, pattern recognition, human kinetics, and wireless transition.        The company name "Noitom" is the reverse spelling of "motion", showing our ambition to change the entire motion capture business.
+                北京诺亦腾科技有限公司位于中关村科技园区德胜科技园内，是一家在动作捕捉领域具有国际竞争力的公司。公司核心团队由多名海外留学归国人员组成，具有世界级研发能力，研究领域涉及传感器、模态识别、运动科学、有限元分析、生物力学以及虚拟现实等。通过多学科知识交叉融合，公司开发了具有国际领先水平的“基于MEMS惯性传感器的动作捕捉技术”，并在此基础上形成了一系列具有完全自主知识产权的低成本高精度动作捕捉产品。
             </p>
             <p>
-               To the people who need to monitor realtime body motion, Noitom's motion capture system is the most user-friendly and accurate solution that allows you to record and digitize complex body motions, anywhere and anytime -- more so than any other competing technologies.
+                尽管基于传感器的动作捕捉技术出现不久，但由于其性价比高，方便易用等特点，已经孕育出巨大的市场机遇，市场已处于爆发前期。公司准确把握技术进步与市场契合的时机，提前进行了充分的技术储备，坚持通过技术创新实现突破，从而创造企业价值并得到世界认可。公司的创新成果吸引了来自不同领域不同层面的诸多关注，包括世界著名的体育训练机构、文化创意团队、医疗康复训练厂商等。公司未来将充分发挥动捕技术优势，与合作方一起携手并进，不断创造出对社会更有利的新技术、新产品、新应用。
+            </p>
+            <h3>国际视野</h3>
+            <p>
+                把握尖端技术发展趋势、熟悉国际市场走向
+            </p>
+            <h3>科技创新</h3>
+            <p>
+                坚持以科技创新为公司立足之本，突破多项技术壁垒
+            </p>
+            <h3>世界领先</h3>
+            <p>
+                完全自主知识产权，世界领先的基于惯性传感器动作捕捉技术
+            </p>
+            <h3>行业融合</h3>
+            <p>
+                科技与文化、科技与教育、科技与医疗融合，推动社会进步
             </p>
         </div>
         <div id="news" class="intro">
             <div class="bt" >
-                <h3>mySwing™挥杆宝中国市场产品首发新闻发布会<br><span class="time">Mar 14th</span></h3>
+                <h3>mySwing™挥杆宝中国市场产品首发新闻发布会<br><span class="time">3月14日</span></h3>
                 <p>
                     2013年3月15日（周五）14：30在北京湾会高尔夫俱乐部举行
                 </p>
@@ -104,70 +120,55 @@
                 <div class="clear"></div>
             </div>
             <div class="bt">
-                <h3>Meet us at the 2013 China Golf Show in Beijing<br><span class="time">Mar 16th</span></h3>
-                <p>China Golf Show (CGS) will be held from March 22nd to 24th at the China National Convention Center in Beijing. Welcome to Noitom booth No.E1072.</p>
+                <h3>诺亦腾参展2013中国（北京）高博会CGS<br><span class="time">3月16日</span></h3>
+                <p>China Golf Show中国国际高尔夫球博览会将于3月22日至24日在国家会议中心举办，诺亦腾展位E1072，欢迎您的莅临指导。</p>
                 <img src="images/news2.png" width="650px">
                 <div class="clear"></div>
             </div>
             <div class="bt">
-                <h3>Download mySwing™ Android App</h3>
-                <p>Please download the free mySwingTM Android App <a href="http://www.noitom.com/download/myswing.apk">here</a> </p>
-                <img src="images/news1.png">
-                <div class="clear"></div>
-            </div>
-            <div class="bt">
-                <h3>Download mySwing™ iOS App</h3>
-                <p>Please download the free mySwingTM iOS App <a href="https://itunes.apple.com/cn/app/myswing/id560946532?mt=8">here</a> </p>
+                <h3>下载 mySwing™ iOS 软件</h3>
+                <p>点击<a style="text-decoration: underline" href="https://itunes.apple.com/cn/app/myswing/id560946532?mt=8">这里</a>下载免费 mySwingTM iOS App软件 </p>
                 <img src="images/news3.png" >
                 <div class="clear"></div>
             </div>
             <div class="bt btlast">
-                <h3>Meet us at the 60th PGA Merchandise Show<br><span class="time">Jan 24-26,2013</span></h3>
-                <p>The 60th PGA Merchandise Show will be held Monday, Jan. 21 and Tuesday, Jan. 22 at the Orange County Convention Center in Orlando. Welcome to Noitom booth.</p>
-                <img src="images/news2.jpg" width="650px">
+                <h3>免费下载 mySwing™ Android 软件  </h3>
+                <p>点击<a style="text-decoration: underline" href="http://www.noitom.com/download/myswing.apk">这里</a>下载免费 mySwingTM Android 软件 </p>
+                <img src="images/news1.png" >
                 <div class="clear"></div>
             </div>
         </div>
         <div id="tech" class="intro">
             <div class="bt">
-                <h3>Motion capture</h3>
+                <h3>动作捕捉技术简介</h3>
                 <p>
-                    Motion capture, motion tracking, or mocap are terms used to describe the process of recording movement and translating that movement onto a digital model.
-                </p>
-                <p>
-                    It is used in military, entertainment, sports, and medical applications, and for validation of computer vision and robotics. In filmmaking, motion capture refers to the recording of human actions and using the data to animate digital character models in 2D or 3D computer animation.
-                </p>
-                <p>
-                    In filmmaking, motion capture refers to the recording of human actions and using the data to animate digital character models in 2D or 3D computer animation.
+                    动作捕捉（Motion Capture），是将运动动作记录为数字模型的过程。
                 </p>
             </div>
             <div class="bt">
-                <h3>Traditional optical based motion capture system</h3>
-                <p>
-                    Optical systems are widly used in motion capture
-                </p>
+                <h3>传统技术——基于视频的人体动作捕捉</h3>
+                <p></p>
                 <ul>
-                    <li>- Existed since the 70’s</li>
-                    <li>- Need to stick numerous reflective units on the body</li>
-                    <li>-  Set up multiple high-speed cameras to capture the movements of reflective units and re-construct 3D human body motion</li>
-                    <li>- Expensive, difficult to setup, performance affected by blocking and poor lighting</li>
+                    <li>- 传统技术</li>
+                    <li>- 通过摄像机捕捉反光标识进行动作捕捉</li>
+                    <li>-  对场地要求高，一般需要在专用工作室内进行</li>
+                    <li>- 价格昂贵、使用瓶颈较高</li>
                 </ul>
                 <img src="images/intro4.jpg">
                 <img src="images/intro6.jpg">
             </div>
             <div>
-                <h3>Noitom motion capture technology</h3>
-                <p>Using our motion capture technology, we are continuously creating fun and affordable products and applications in the fields of sports, gaming, movie making, and etc. that may make a difference in people's daily life.</p>
-                <p>Our mocap have a significant advantage over optical systems as they do not suffer from occlusion or line of sight problems. Our motion capture systems are light weight, fully portable and will not restrict your subject's movement, allowing you to take your capture session out of the lab and into everyday environments. All data is collected Raw from the IMU's providing 3D orientation, 3D acceleration, 3D rate of turn (gyro rate), 3D earth magnetic field, Quaternion, and Euler angles;</p>
+                <h3>新技术——基于惯性传感器的人体动作捕捉</h3>
+                <p></p>
                 <ul>
-                    <li>- Low cost.</li>
-                    <li>- Low energy consumption.</li>
-                    <li>- Small and light.</li>
-                    <li>- Fully wireless.</li>
-                    <li>- Scalable system definition.</li>
-                    <li>- Less sensor nodes for relatively complex motion reconstruction thanks to better algorithms.</li>
-                    <li>- Direct connection with smart devices</li>
+                    <li>- 新兴技术</li>
+                    <li>- 通过穿戴式传感器进行动作捕捉</li>
+                    <li>- 无需外部设备，使用简便，适用于各种场合</li>
+                    <li>- 价格低廉，应用空间广阔</li>
                 </ul>
+                <p>
+                    诺亦腾掌握基于惯性传感器动作捕捉系统的核心技术，在系统架构、核心算法方面均具有优势，正努力成为这一领域的领跑者
+                </p>
             </div>
         </div>
         <!--<div id="news1" class="intro">-->
@@ -195,9 +196,9 @@
         <div id="second" class="widget-area">
             <ul class="xoxo">
                 <li class="widget-container widget_execphp">
-                    <h3 class="widget-title">ABOUT NOITOM</h3>
+                    <h3 class="widget-title">关于诺亦腾</h3>
                     <div class="execphpwidget">
-                        <p>Noitom develops highly accurate and user-friendly inertial motion capture systems, allowing you to record and digitize complex body motions, anywhere and anytime.</p>
+                        <p>诺亦腾致力于高精度且易于使用的动作姿态捕捉系统的研发，给用户提供全天候的动作姿态数字化平台。</p>
                     </div>
                 </li>
             </ul>
@@ -226,12 +227,12 @@
         <div id="third" class="widget-area">
             <ul class="xoxo">
                 <li>
-                    <h3 class="widget-title">CONTACT</h3>
+                    <h3 class="widget-title">诺亦腾北京（总部）</h3>
                     <ul class="menu">
-                        <li >Noitom Beijing Headquarter Room 412, Main Tower  No.28 Xinjiekouwai Blvd.</li>
-                        <li >Beijing, 100088,China</li>
-                        <li >Tel: +86 10 82053583</li>
-                        <li>Email: info@noitom.com</li>
+                        <li >地址：北京市西城区新街口外大街28号主楼412室</li>
+                        <li >邮编：100088</li>
+                        <li >电话：+86 10 82053583</li>
+                        <li>邮箱: info@noitom.com</li>
                     </ul>
                 </li>
             </ul>
