--- a/application.html
+++ b/application.html
@@ -30,7 +30,7 @@
                     <a href="support.html">SUPPORT</a>
                 </li>
                 <li>
-                    <a href="concat.html">CONTACT</a>
+                    <a href="conact.html">CONTACT</a>
                 </li>
             </ul>
         </div>
