--- a/index_zh.html
+++ b/index_zh.html
@@ -16,22 +16,22 @@
         <div class="nav fl">
             <ul>
                 <li>
-                    <a href="index.html">HOME</a>
+                    <a href="index_zh.html">首页</a>
                 </li>
                 <li>
-                    <a href="about.html">ABOUT</a>
+                    <a href="about_zh.html">关于诺亦腾</a>
                 </li>
                 <li>
-                    <a href="application.html">APPLICATIONS</a>
+                    <a href="application_zh.html">行业</a>
                 </li>
                 <li>
-                    <a href="products.html">PRODUCTS</a>
+                    <a href="products_zh.html">产品</a>
                 </li>
                 <li>
-                    <a href="support.html">SUPPORT</a>
+                    <a href="support_zh.html">支持</a>
                 </li>
                 <li>
-                    <a href="conact.html">CONTACT</a>
+                    <a href="conact_zh.html">联系我们</a>
                 </li>
             </ul>
         </div>
@@ -44,14 +44,14 @@
             </div>
             <div class="left" id="left">
                 <div class="ipt">
-                    <a class="video" href="http://www.youtube.com/v/KE3aM6M9rFI" target="_blank">Video</a>
-                    <a class="product" href="products.html">Product info</a>
+                    <a class="video" href="http://www.youtube.com/v/KE3aM6M9rFI" target="_blank">视频</a>
+                    <a class="product" href="products.html">产品介绍</a>
                 </div>
             </div>
             <div class="right active" id="right">
                 <div class="ipt">
-                    <a class="video" href="http://www.youtube.com/v/4fpVIa1SFWs" target="_blank">Video</a>
-                    <a class="product" href="products.html?news">Product info</a>
+                    <a class="video" href="http://www.youtube.com/v/4fpVIa1SFWs" target="_blank">视频</a>
+                    <a class="product" href="products.html?news">产品介绍</a>
                 </div>
             </div>
             <div class="right-smail" id="rightsmail">
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div class="solution">
-        <h3>Applications of Motion Capture Technology</h3>
+        <h3>动作捕捉技术的相关应用</h3>
 
         <div class="items">
             <div class="item fl">
@@ -75,9 +75,9 @@
                     <img src="images/smailimgbg.gif" >
                 </div>
                 <div class="clear"></div>
-                <h3 onclick="link('enter')">Entertainment</h3>
+                <h3 onclick="link('enter')">影视娱乐</h3>
                 <p class="desc">
-                    Film and animation making, computer game development.
+                    电影，动漫及游戏制作等。
                 </p>
             </div>
             <div class="item fl" >
@@ -89,9 +89,9 @@
                 <img src="images/smailimgbg.gif" class="fl">
 
                 <div class="clear"></div>
-                <h3 onclick="link('sport')">Sports & Biomedical</h3>
+                <h3 onclick="link('sport')">体育及生物医疗</h3>
                 <p class="desc">
-                    Sports training, rehabilitation and others.
+                    体育及生物医疗
                 </p>
             </div>
             <div class="item fl">
@@ -103,9 +103,9 @@
                 <img src="images/smailimgbg.gif" class="fl">
 
                 <div class="clear"></div>
-                <h3 onclick="link('virtual')">Virtual Reality</h3>
+                <h3 onclick="link('virtual')">虚拟现实</h3>
                 <p class="desc">
-                    Virtual reality, interaction and virtual augmented reality.
+                    虚拟现实类应用如人机交互，现实增强等。
                 </p>
             </div>
             <div class="item fl">
@@ -117,9 +117,9 @@
                 <img src="images/smailimgbg.gif" class="fl">
 
                 <div class="clear"></div>
-                <h3 onclick="link('industrial')">Industrial</h3>
+                <h3 onclick="link('industrial')">工业应用</h3>
                 <p class="desc">
-                    Robotics, unmanned aircraft and others.
+                    工业应用
                 </p>
             </div>
             <div class="clear"></div>
@@ -162,9 +162,9 @@
         <div id="second" class="widget-area">
             <ul class="xoxo">
                 <li class="widget-container widget_execphp">
-                    <h3 class="widget-title">ABOUT NOITOM</h3>
+                    <h3 class="widget-title">关于诺亦腾</h3>
                     <div class="execphpwidget">
-                        <p>Noitom develops highly accurate and user-friendly inertial motion capture systems, allowing you to record and digitize complex body motions, anywhere and anytime.</p>
+                        <p>诺亦腾致力于高精度且易于使用的动作姿态捕捉系统的研发，给用户提供全天候的动作姿态数字化平台。</p>
                     </div>
                 </li>
             </ul>
@@ -193,12 +193,12 @@
         <div id="third" class="widget-area">
             <ul class="xoxo">
                 <li>
-                    <h3 class="widget-title">CONTACT</h3>
+                    <h3 class="widget-title">诺亦腾北京（总部）</h3>
                     <ul class="menu">
-                        <li >Noitom Beijing Headquarter Room 412, Main Tower  No.28 Xinjiekouwai Blvd.</li>
-                        <li >Beijing, 100088,China</li>
-                        <li >Tel: +86 10 82053583</li>
-                        <li>Email: info@noitom.com</li>
+                        <li >地址：北京市西城区新街口外大街28号主楼412室</li>
+                        <li >邮编：100088</li>
+                        <li >电话：+86 10 82053583</li>
+                        <li>邮箱: info@noitom.com</li>
                     </ul>
                 </li>
             </ul>
