--- a/conact.html
+++ b/conact.html
@@ -34,6 +34,9 @@
                 </li>
             </ul>
         </div>
+        <div class="lang fr">
+            <a href="index.html">English</a>/<a href="index_zh.html">Chinese</a>
+        </div>
     </div>
 </div>
 <div class="content-wrap ">
