--- a/conact_zh.html
+++ b/conact_zh.html
@@ -34,6 +34,9 @@
                         </li>
                     </ul>
                 </div>
+        <div class="lang fr">
+            <a href="index.html">英文</a>/<a href="index_zh.html">中文</a>
+        </div>
     </div>
 </div>
 <div class="content-wrap ">
