--- a/index_zh.html
+++ b/index_zh.html
@@ -35,6 +35,9 @@
                 </li>
             </ul>
         </div>
+        <div class="lang fr">
+            <a href="index.html">英文</a>/<a href="index_zh.html">中文</a>
+        </div>
     </div>
 </div>
 <div class="content-wrap">
@@ -126,24 +129,24 @@
         </div>
     </div>
     <div class="news clearfix">
-        <h2>News</h2>
+        <h2>新闻</h2>
         <div class="scrollnews" id="scrollnews">
             <div class="news1" id="news1">
                 <div class="newsitem">
-                    <a class="bullet-link" href="about.html?news">mySwing™ App version V 1.2.3 released:&nbsp;&nbsp;Jan 14, 2013</a>
+                    <a class="bullet-link" href="about.html?news">mySwing™挥杆宝中国市场产品首发新闻发布会:&nbsp;&nbsp;Mar 14, 2013</a>
                 </div>
                 <div class="newsitem">
-                    <a class="bullet-link" href="about.html?news">Meet us at the 60th PGA Merchandise Show:&nbsp;&nbsp;Jan 24-26,2013</a>
+                    <a class="bullet-link" href="about.html?news">诺亦腾参展2013中国（北京）高博会CGS:&nbsp;&nbsp;Mar 16,2013</a>
                 </div>
                 <div class="newsitem">
-                    <a class="bullet-link" href="about.html?news">We are exhibiting at 2013 China Golf Show in Beijing:&nbsp;&nbsp;Mar. 22 -24,2013</a>
+                    <a class="bullet-link" href="about.html?news">下载 mySwing™ iOS 软件</a>
                 </div>
                 <div class="clear"></div>
             </div>
             <div class="news2" id="news2"></div>
         </div>
         <div class="readmore">
-            <a href="about.html?news">Read More</a>
+            <a href="about.html?news">更多</a>
         </div>
     </div>
 </div>
