--- a/products_zh.html
+++ b/products_zh.html
@@ -25,27 +25,30 @@
             <a href="index.html"><img src="images/logo.gif"></a>
         </div>
         <div class="nav fl">
-                    <ul>
-                        <li>
-                            <a href="index_zh.html">首页</a>
-                        </li>
-                        <li>
-                            <a href="about_zh.html">关于诺亦腾</a>
-                        </li>
-                        <li>
-                            <a href="application_zh.html">行业</a>
-                        </li>
-                        <li>
-                            <a href="products_zh.html">产品</a>
-                        </li>
-                        <li>
-                            <a href="support_zh.html">支持</a>
-                        </li>
-                        <li>
-                            <a href="conact_zh.html">联系我们</a>
-                        </li>
-                    </ul>
-                </div>
+            <ul>
+                <li>
+                    <a href="index_zh.html">首页</a>
+                </li>
+                <li>
+                    <a href="about_zh.html">关于诺亦腾</a>
+                </li>
+                <li>
+                    <a href="application_zh.html">行业</a>
+                </li>
+                <li>
+                    <a href="products_zh.html">产品</a>
+                </li>
+                <li>
+                    <a href="support_zh.html">支持</a>
+                </li>
+                <li>
+                    <a href="conact_zh.html">联系我们</a>
+                </li>
+            </ul>
+        </div>
+        <div class="lang fr">
+            <a href="index.html">英文</a>/<a href="index_zh.html">中文</a>
+        </div>
     </div>
 </div>
 <div class="content-wrap">
