--- a/conact_zh.html
+++ b/conact_zh.html
@@ -10,7 +10,7 @@
 <div class="header">
     <div class="header-container">
         <div class="logo fl">
-            <a href="index.html"><img src="images/logo.gif"></a>
+            <a href="index_zh.html"><img src="images/logo.gif"></a>
         </div>
         <div class="nav fl">
                     <ul>
