--- a/index_zh.html
+++ b/index_zh.html
@@ -11,7 +11,7 @@
 <div class="header">
     <div class="header-container">
         <div class="logo fl">
-            <a href="index.html"><img src="images/logo.gif"></a>
+            <a href="index_zh.html"><img src="images/logo.gif"></a>
         </div>
         <div class="nav fl">
             <ul>
@@ -47,14 +47,14 @@
             </div>
             <div class="left" id="left">
                 <div class="ipt">
-                    <a class="video" href="http://www.youtube.com/v/KE3aM6M9rFI" target="_blank">视频</a>
-                    <a class="product" href="products.html">产品介绍</a>
+                    <a class="video" href=" http://v.youku.com/v_show/id_XNTA2MTU5NDQ0.html" target="_blank">视频</a>
+                    <a class="product" href="products_zh.html">产品介绍</a>
                 </div>
             </div>
             <div class="right active" id="right">
                 <div class="ipt">
-                    <a class="video" href="http://www.youtube.com/v/4fpVIa1SFWs" target="_blank">视频</a>
-                    <a class="product" href="products.html?news">产品介绍</a>
+                    <a class="video" href="http://v.youku.com/v_show/id_XNTA2MTk1Njgw.html" target="_blank">视频</a>
+                    <a class="product" href="products_zh.html?news">产品介绍</a>
                 </div>
             </div>
             <div class="right-smail" id="rightsmail">
@@ -80,7 +80,7 @@
                 <div class="clear"></div>
                 <h3 onclick="link('enter')">影视娱乐</h3>
                 <p class="desc">
-                    电影，动漫及游戏制作等。
+                    电影，动漫及游戏制作等
                 </p>
             </div>
             <div class="item fl" >
@@ -108,7 +108,7 @@
                 <div class="clear"></div>
                 <h3 onclick="link('virtual')">虚拟现实</h3>
                 <p class="desc">
-                    虚拟现实类应用如人机交互，现实增强等。
+                    虚拟现实类应用如人机交互，现实增强等
                 </p>
             </div>
             <div class="item fl">
@@ -133,20 +133,20 @@
         <div class="scrollnews" id="scrollnews">
             <div class="news1" id="news1">
                 <div class="newsitem">
-                    <a class="bullet-link" href="about.html?news">mySwing™挥杆宝中国市场产品首发新闻发布会:&nbsp;&nbsp;Mar 14, 2013</a>
+                    <a class="bullet-link" href="about_zh.html?news">mySwing™挥杆宝中国市场产品首发新闻发布会:&nbsp;&nbsp;Mar 14, 2013</a>
                 </div>
                 <div class="newsitem">
-                    <a class="bullet-link" href="about.html?news">诺亦腾参展2013中国（北京）高博会CGS:&nbsp;&nbsp;Mar 16,2013</a>
+                    <a class="bullet-link" href="about_zh.html?news">诺亦腾参展2013中国（北京）高博会CGS:&nbsp;&nbsp;Mar 16,2013</a>
                 </div>
                 <div class="newsitem">
-                    <a class="bullet-link" href="about.html?news">下载 mySwing™ iOS 软件</a>
+                    <a class="bullet-link" href="about_zh.html?news">下载 mySwing™ iOS 软件</a>
                 </div>
                 <div class="clear"></div>
             </div>
             <div class="news2" id="news2"></div>
         </div>
         <div class="readmore">
-            <a href="about.html?news">更多</a>
+            <a href="about_zh.html?news">更多</a>
         </div>
     </div>
 </div>
@@ -264,7 +264,7 @@
         }
     })();
     function link(tab){
-        location.href="application.html?"+tab;
+        location.href="application_zh.html?"+tab;
     }
 
 
