--- a/products_zh.html
+++ b/products_zh.html
@@ -47,7 +47,7 @@
             </ul>
         </div>
         <div class="lang fr">
-            <a href="index.html">英文</a>/<a href="index_zh.html">中文</a>
+            <a href="index.html"><img src="images/eng.jpg"></a>
         </div>
     </div>
 </div>
