--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </ul>
         </div>
         <div class="lang fr">
-            <a href="index.html">English</a>/<a href="index_zh.html">Chinese</a>
+            <a href="index_zh.html"><img src="images/china.jpg"> </a>
         </div>
     </div>
 </div>
